some little modifs

--- a/tuto_opencv/image_type/makefile
+++ b/tuto_opencv/image_type/makefile
@@ -3,9 +3,9 @@ CXX = g++
 RM = rm -f
 CPPFLAGS = -Wall -g 
 LDFLAGS = -g 
-LDLIBS = -lopencv_imgcodecs -lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_videoio
+LDLIBS = -lopencv_imgcodecs -lopencv_core -lopencv_highgui -lopencv_imgproc 
 
-SRCS = td_opencv_2.cpp
+SRCS = image_type.cpp
 OBJS = $(subst .cpp,.o,$(SRCS))
 
 TARGET = program
@@ -13,7 +13,7 @@ TARGET = program
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CXX) $(LDFLAGS) -o $(TARGET).exe $(OBJS) $(LDLIBS)
+	$(CXX) $(LDFLAGS) -o $(TARGET) $(OBJS) $(LDLIBS)
 
 $(TARGET).o: $(TARGET).o
 
@@ -21,4 +21,4 @@ clean:
 	$(RM) $(OBJS)
 
 deepclean: clean
-	$(RM) $(TARGET).exe
+	$(RM) $(TARGET)
