--- a/tuto_opencv/pixel_manipulation/makefile
+++ b/tuto_opencv/pixel_manipulation/makefile
@@ -5,7 +5,7 @@ CPPFLAGS = -Wall -g
 LDFLAGS = -g 
 LDLIBS = -lopencv_imgcodecs -lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_videoio
 
-SRCS = td_opencv_4.cpp
+SRCS = pixel_manip.cpp
 OBJS = $(subst .cpp,.o,$(SRCS))
 
 TARGET = program
@@ -13,7 +13,7 @@ TARGET = program
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CXX) $(LDFLAGS) -o $(TARGET).exe $(OBJS) $(LDLIBS)
+	$(CXX) $(LDFLAGS) -o $(TARGET) $(OBJS) $(LDLIBS)
 
 $(TARGET).o: $(TARGET).o
 
@@ -21,4 +21,4 @@ clean:
 	$(RM) $(OBJS)
 
 deepclean: clean
-	$(RM) $(TARGET).exe
+	$(RM) $(TARGET)
